# personal-kb

./: .env.example  .gitignore  README.md  pyproject.toml
data/raw/: rag_test.html
docs/process/: implementation_plan.md  task.md  walkthrough.md
scripts/: ask.py  check_ollama.py  ingest.py  query.py
src/kb/: schema.py
src/kb/chunking/: chunker.py
src/kb/index/: vector_store.py
src/kb/ingestion/: html_loader.py  pdf_loader.py
src/kb/rag/: answer.py  llm.py  prompt.py
src/kb/retrieve/: retriever.py
src/kb/ui/: app.py
tests/: test_chunking.py  test_html_loader.py  test_pdf_loader.py  test_retriever.py  test_vector_store.py
